# chinese-learning

./: .gitignore  AGENTS.md  README.md  SUBTLEX-CH-CHR  flake.nix  index.html  parse_unihan.py
backend/: .gitignore  README.md  default.nix  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/controllers/: auth.py  courses.py  lessons.py  payments.py  progress.py
backend/app/models/: __init__.py  base.py
backend/app/services/: llm.py  seed_courses.py  vocabulary.py
backend/tests/: conftest.py  test_auth.py  test_courses.py  test_payments.py  test_progress.py  test_vocabulary.py
sveltekit-app/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
sveltekit-app/src/: app.css  app.html
sveltekit-app/src/lib/components/: AddToStudyList.svelte  Breadcrumb.svelte  ChatPanel.svelte  IDSTree.svelte  StudyListPanel.svelte
sveltekit-app/src/lib/data/: loader.ts
sveltekit-app/src/lib/srs/: grading.test.ts  grading.ts  quiz-results.test.ts  quiz.test.ts  quiz.ts  sm2.test.ts  sm2.ts
sveltekit-app/src/lib/stores/: chat.ts  idb.test.ts  idb.ts  studyList.ts
sveltekit-app/src/lib/utils/: ids.ts  pinyin.ts
sveltekit-app/src/routes/: +layout.svelte  +page.svelte
sveltekit-app/src/routes/char/[char]/: +page.svelte
sveltekit-app/src/routes/learn/: +page.svelte
sveltekit-app/src/routes/learn/quiz/: +page.svelte
sveltekit-app/src/routes/phonetic/: +page.svelte
sveltekit-app/src/routes/phonetic/[char]/: +page.svelte
sveltekit-app/src/routes/radical/[id]/: +page.svelte
sveltekit-app/src/test/: setup.ts
(+1 files in other folders)
