[project]
name = "chinese-courses-backend"
version = "0.1.0"
description = "HSK Learning Environment Backend API"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard,jwt,sqlalchemy]>=2.0",
    "advanced-alchemy>=0.8",
    "uvicorn>=0.27",
    "asyncpg>=0.29",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "passlib[bcrypt]>=1.7",
    "stripe>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

